<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/logoDesciption"
                android:src="@drawable/logo"

                >

            </ImageView>


        <LinearLayout
            android:layout_marginTop="150dp"
            android:layout_width="350dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                app:startIconTint="#fff"
                app:startIconDrawable="@drawable/ic_person_white_24dp"
                app:startIconContentDescription="user icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsuarioB38"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/user_pass_hint"
                app:startIconTint="#fff"
                app:startIconDrawable="@drawable/ic_lock_white_24dp"
                app:startIconContentDescription="user icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSenhaB38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCadastrarB38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FF5722"
                    android:text="@string/button_cad">

                </Button>

                <Button
                    android:id="@+id/btnEntrarB38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="#FF5722"
                    android:text="@string/button_log_text">

                </Button>
            </LinearLayout>
        </LinearLayout>
</ScrollView>